<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_about">关于</string>
    <string name="action_example">Example action</string>
    <string name="action_help">帮助</string>
    <string name="action_settings">设置</string>
    <string name="app_name">天下家谱</string>
    <string name="birthdayhint">1990-06-09</string>
    <string name="btnBack">返回</string>
    <string name="btnDelete">删除</string>
    <string name="btnEdit">修改</string>
    <string name="btnExit">退出</string>
    <string name="btnNew">新建</string>
    <string name="btnSave">保存</string>
    <string name="etJpplace">姓氏所在城市或区域</string>
    <string name="etJptitleHint">地区+姓氏</string>
    <string name="etSurnamehint">单字姓或复姓</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hintCname">姓+名</string>
    <string name="hintLastname">字号</string>
    <string name="hintSearch">关键字</string>
    <string name="mnuGetPwd">找回密码</string>
    <string name="mnuLogin">登入</string>
    <string name="mnuRegister">注册</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="share">分享</string>
    <string name="spinner_beishu">请选择显示辈数</string>
    <string name="title_activity_about">关于...</string>
    <string name="title_activity_baijiaxing">中华百家姓</string>
    <string name="title_activity_docs">家族文档</string>
    <string name="title_activity_docs_edit">文档维护</string>
    <string name="title_activity_help">快速入门</string>
    <string name="title_activity_image_zoom">图片缩放</string>
    <string name="title_activity_jpedit">谱系维护</string>
    <string name="title_activity_login">用户登入</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_activity_phone_verify">手机号码验证</string>
    <string name="title_activity_relation">族人关系</string>
    <string name="title_activity_rels_edit">关系维护</string>
    <string name="title_activity_rels_item">关系项目</string>
    <string name="title_activity_set">系统设置</string>
    <string name="title_activity_splash">天下家谱</string>
    <string name="title_activity_zr_card">族人资料</string>
    <string name="title_activity_zredit">族人维护</string>
    <string name="title_activity_zrtree">亲系图</string>
    <string name="title_activity_zuren">族人维护</string>
    <string name="title_sectionBJX">中华百家姓</string>
    <string name="title_sectionDoc">家族文档</string>
    <string name="title_sectionExit">退出</string>
    <string name="title_sectionHelp">快速入门</string>
    <string name="title_sectionJP">谱系维护</string>
    <string name="title_sectionRel">族人关系</string>
    <string name="title_sectionSys">设置</string>
    <string name="title_sectionTree">亲系图</string>
    <string name="title_sectionZR">族人维护</string>
    <string name="tvMyJiapu">我的家谱</string>
    <string name="zrlevelhint">1</string>
    <string name="zrrankhint">1</string>
</resources>
